# dementia-prediction

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
artifacts/data/: X_test.csv  y_test.csv  y_train.csv
artifacts/preprocessor/: preprocessor.pkl
config/: config.yaml
models/: catboost.pkl  lightgbm.pkl  log_reg.pkl  stack_raw.pkl  xgboost.pkl
notebooks/: Dementia_Prediction_Trials.ipynb
pipelines/: data_pipeline.py  inference_pipeline.py  training_pipeline.py
src/: data_cleaning_feature_eng.py  data_ingestion.py  data_splitter.py  model_evaluator.py  model_inference.py  model_trainer.py  utils.py
