[project]
name = "dementia-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost==1.2.8",
    "gdown==5.2.0",
    "imblearn==0.0",
    "joblib==1.5.2",
    "lightgbm==4.6.0",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "pyyaml==6.0.3",
    "scikit-learn==1.7.2",
    "xgboost==3.1.1",
]
